syntax = "proto3";  // 版本声明
package grpcinclass; // 包名，包名可以避免对message类型之间的名字冲突，同名的message可以通过package进行区分
option go_package = "/proto"; // 生成的go文件的package名（基于一定规则生成）


//密码注册
message LoginByPWResp{
  bool OK = 1;
}

message LoginByPWReq{
  string loginAccount = 1;
  string PassWord = 2;
}
//短信登录
message  LoginBySmsReq{
  string Phone=1;
  string Code=2;
}

//注册
message RegisterReq{
  string Username=1;
  string Pwd=2;
  string Phone=3;
}

message RegisterResp{
  bool OK=1;
}

service UseCenter{
  rpc LoginByPW(LoginByPWReq)   returns (LoginByPWResp){}
  rpc LoginBYSMs(LoginBySmsReq)  returns (LoginBySmsReq){}
  rpc Register(RegisterReq) returns (RegisterResp){}
}